--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,2 @@
 @import url(./components/Content/content.css);
-@import url(./components/Helper/helper.css);
+@import url(./components/Error/error.css);
